Update borwser name

--- a/src/main/resources/bimabharosa.properties
+++ b/src/main/resources/bimabharosa.properties
@@ -14,6 +14,6 @@ edgeDriverPathLinuxMac = ./Drivers/msedgedriver
 
 #Operating System and browser configuration
 OS = Windows
-Browser = Edge
+Browser = Chrome
 timeout = 20
 
